Fix the overflow in the example.

--- a/css/style.css
+++ b/css/style.css
@@ -680,6 +680,7 @@ html, body {
   display: block;
   white-space: pre;
   word-wrap: break-word;
+  overflow: scroll;
 }
 
 .example-group:hover code, .example-group:hover .example-group-header {
